<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="search">Поиск</string>
    <string name="musicLibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="app_name">Playlist Maker</string>
</resources>