<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTextAppearance.Title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display"
        android:padding="@dimen/main_padding"
        android:text="@string/dark_theme"
        android:textSize="@dimen/normal_text"
        android:theme="@style/MySwitch" />

    <Button
        android:id="@+id/share_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:gravity="start"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:icon="@drawable/share_icon"
        app:iconGravity="end"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/gray" />

    <Button
        android:id="@+id/support_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:gravity="start"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/write_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:icon="@drawable/support_icon"
        app:iconGravity="end"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/gray" />

    <Button
        android:id="@+id/terms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:gravity="start"
        android:paddingStart="@dimen/main_padding"
        android:paddingEnd="@dimen/main_padding"
        android:text="@string/terms_of_use"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:icon="@drawable/arrow_forward_icon"
        app:iconGravity="end"
        app:iconSize="@dimen/icon_size"
        app:iconTint="@color/gray" />
</LinearLayout>