<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/musicLibrary"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/library_music_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />


</LinearLayout>